Tue Oct 11 13:50:16 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4: fix typo

Tue Oct 11 10:52:15 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsiconv.h: continue dos32x merge

Fri Oct  7 14:34:43 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/defncopy.txt src/apps/defncopy.c generate CREATE TABLE ddl

Fri Oct  7 17:06:18 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/sybdb.h: continue merging dos32 patch
	* src/dblib/rpc.c: silly bug freeing rpc name
	* src/tds/net.c: removed warning compiling under dos32
	* src/tds/numeric.c: removed warning if int64 not available

Fri Oct  7 12:22:44 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/net.c include/tds_sysdep_private.h:
	- continue merge patch for dos32

Fri Oct  7 12:12:39 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dbopen.c src/tds/config.c src/tds/convert.c:
	- patch to support dos32 (thanks to Flaviano Maricotti)
	* src/tds/token.c:
	- fixed silly bug for empty not-null text (thanks to Flaviano
	  Maricotti)

Sun Oct  2 22:37:53 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am doc/userguide.dsl.in
	- DocBook HTML output now references a stylesheet. 
	* doc/userguide.css added this HTML stylesheet
	* doc/userguide.sgml small fix
	* include/sybdb.h doc/dblib_errors.txt src/dblib/dblib.c
	- added unicode errors
	* src/pool/member.c src/tds/token.c
	- fixed compiler warnings

Fri Sep 30 16:00:47 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/bsqldb.txt src/apps/bsqldb.c
	- added -q to suppress metadata, and updated man page

Tue Sep 27 16:30:54 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/apps/bsqldb.c write server messages to stderr

Sun Sep 25 15:29:56 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/net.c:
	- fix possible core (patch from Sergey A. Cherukhin)

Thu Sep 22 16:31:58 CET 2005    Frediano Ziglio <freddy77@angelfire.com>