@@ -1,3 +1,6 @@
+Tue Oct 11 14:43:16 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* src/tds/numeric.c: optimize for Watcom compiler
+
 Tue Oct 11 13:50:16 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* acinclude.m4: fix typo
 
